--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ h1{
   border: 2px solid #ffff;
 }
 
-@media (max-width:376px){
+@media only screen and (max-width:376px){
   .container{
     display:flex;
     flex-direction:column;
